--- a/__Unity-DesignPatterns/Packages/manifest.json
+++ b/__Unity-DesignPatterns/Packages/manifest.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
+    "com.rmc.rmc-mini-mvcs": "file:F:/Game Projects/Game/rmc-mini-mvcs",
     "com.unity.collab-proxy": "2.7.1",
     "com.unity.feature.2d": "2.0.1",
-    "com.unity.ide.rider": "3.0.35",
+    "com.unity.ide.rider": "3.0.36",
     "com.unity.ide.visualstudio": "2.0.23",
     "com.unity.inputsystem": "1.14.0",
     "com.unity.multiplayer.center": "1.0.0",
